cmake_minimum_required(VERSION 3.8)
project(GPCA_SW_Functional_Model_Code)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        GPCA_SW_Functional_grt_rtw/GPCA_SW_Functional.c
        GPCA_SW_Functional_grt_rtw/GPCA_SW_Functional.h
        GPCA_SW_Functional_grt_rtw/GPCA_SW_Functional_private.h
        GPCA_SW_Functional_grt_rtw/GPCA_SW_Functional_types.h
        GPCA_SW_Functional_grt_rtw/rt_logging.h
        GPCA_SW_Functional_grt_rtw/rt_mxclassid.h
        GPCA_SW_Functional_grt_rtw/rt_nonfinite.h
        GPCA_SW_Functional_grt_rtw/rtGetInf.h
        GPCA_SW_Functional_grt_rtw/rtGetNaN.h
        GPCA_SW_Functional_grt_rtw/rtmodel.h
        GPCA_SW_Functional_grt_rtw/rtw_continuous.h
        GPCA_SW_Functional_grt_rtw/rtw_extmode.h
        GPCA_SW_Functional_grt_rtw/rtw_matlogging.h
        GPCA_SW_Functional_grt_rtw/rtw_solver.h
        GPCA_SW_Functional_grt_rtw/rtwtypes.h
        GPCA_SW_Functional_grt_rtw/simstruc_types.h
        GPCA_SW_Functional_grt_rtw/sl_sample_time_defs.h
        GPCA_SW_Functional_grt_rtw/sl_types_def.h
        GPCA_SW_Functional_grt_rtw/sysran_types.h
        GPCA_SW_Functional_grt_rtw/tmwtypes.h
        slprj/at91lib/boards/at91sam7x-ek/at91sam7x128/AT91SAM7X128.h
        slprj/at91lib/boards/at91sam7x-ek/at91sam7x256/AT91SAM7X256.h
        slprj/at91lib/boards/at91sam7x-ek/at91sam7x512/AT91SAM7X512.h
        slprj/at91lib/boards/at91sam7x-ek/board.h
        slprj/at91lib/boards/at91sam7x-ek/board_lowlevel.c
        slprj/at91lib/boards/at91sam7x-ek/board_memories.c
        slprj/at91lib/boards/at91sam7x-ek/board_memories.h
        slprj/at91lib/peripherals/aic/aic.c
        slprj/at91lib/peripherals/aic/aic.h
        slprj/at91lib/peripherals/dbgu/dbgu.c
        slprj/at91lib/peripherals/dbgu/dbgu.h
        slprj/at91lib/peripherals/pio/pio.c
        slprj/at91lib/peripherals/pio/pio.h
        slprj/at91lib/peripherals/pio/pio_it.c
        slprj/at91lib/peripherals/pio/pio_it.h
        slprj/at91lib/peripherals/pit/pit.c
        slprj/at91lib/peripherals/pit/pit.h
        slprj/at91lib/peripherals/tc/tc.c
        slprj/at91lib/peripherals/tc/tc.h
        slprj/at91lib/utility/assert.h
        slprj/at91lib/utility/led.c
        slprj/at91lib/utility/led.h
        slprj/at91lib/utility/stdio.c
        slprj/at91lib/utility/trace.h
        slprj/grt/_sharedutils/div_s32.c
        slprj/grt/_sharedutils/div_s32.h
        slprj/grt/_sharedutils/rt_nonfinite.c
        slprj/grt/_sharedutils/rt_nonfinite.h
        slprj/grt/_sharedutils/rtGetInf.c
        slprj/grt/_sharedutils/rtGetInf.h
        slprj/grt/_sharedutils/rtGetNaN.c
        slprj/grt/_sharedutils/rtGetNaN.h
        slprj/grt/_sharedutils/rtw_shared_utils.h
        slprj/grt/_sharedutils/rtwtypes.h
        slprj/grt/_sharedutils_2/rt_logging.h
        slprj/grt/_sharedutils_2/rt_mxclassid.h
        slprj/grt/_sharedutils_2/rtw_continuous.h
        slprj/grt/_sharedutils_2/rtw_extmode.h
        slprj/grt/_sharedutils_2/rtw_matlogging.h
        slprj/grt/_sharedutils_2/rtw_solver.h
        slprj/grt/_sharedutils_2/simstruc_types.h
        slprj/grt/_sharedutils_2/sl_sample_time_defs.h
        slprj/grt/_sharedutils_2/sl_types_def.h
        slprj/grt/_sharedutils_2/sysran_types.h
        slprj/grt/_sharedutils_2/tmwtypes.h
        slprj/grt/ALARM_Functional/ALARM_Functional.c
        slprj/grt/ALARM_Functional/ALARM_Functional.h
        slprj/grt/ALARM_Functional/ALARM_Functional_private.h
        slprj/grt/ALARM_Functional/ALARM_Functional_types.h
        slprj/grt/CONFIG_Functional/CONFIG_Functional.c
        slprj/grt/CONFIG_Functional/CONFIG_Functional.h
        slprj/grt/CONFIG_Functional/CONFIG_Functional_private.h
        slprj/grt/CONFIG_Functional/CONFIG_Functional_types.h
        slprj/grt/GPCA_SW_Functional/GPCA_SW_Functional.c
        slprj/grt/GPCA_SW_Functional/GPCA_SW_Functional.h
        slprj/grt/GPCA_SW_Functional/GPCA_SW_Functional_private.h
        slprj/grt/GPCA_SW_Functional/GPCA_SW_Functional_types.h
        slprj/grt/GPCA_SW_Logical_Architecture/GPCA_SW_Logical_Architecture.c
        slprj/grt/GPCA_SW_Logical_Architecture/GPCA_SW_Logical_Architecture.h
        slprj/grt/GPCA_SW_Logical_Architecture/GPCA_SW_Logical_Architecture_private.h
        slprj/grt/GPCA_SW_Logical_Architecture/GPCA_SW_Logical_Architecture_types.h
        slprj/grt/INFUSION_MGR_Functional/INFUSION_MGR_Functional.c
        slprj/grt/INFUSION_MGR_Functional/INFUSION_MGR_Functional.h
        slprj/grt/INFUSION_MGR_Functional/INFUSION_MGR_Functional_private.h
        slprj/grt/INFUSION_MGR_Functional/INFUSION_MGR_Functional_types.h
        slprj/grt/Logging_Functional/Logging_Functional.c
        slprj/grt/Logging_Functional/Logging_Functional.h
        slprj/grt/Logging_Functional/Logging_Functional_private.h
        slprj/grt/Logging_Functional/Logging_Functional_types.h
        slprj/grt/SYS_STATS_Functional/SYS_STATS_Functional.c
        slprj/grt/SYS_STATS_Functional/SYS_STATS_Functional.h
        slprj/grt/SYS_STATS_Functional/SYS_STATS_Functional_private.h
        slprj/grt/SYS_STATS_Functional/SYS_STATS_Functional_types.h
        slprj/grt/System_Monitor_Functional/System_Monitor_Functional.c
        slprj/grt/System_Monitor_Functional/System_Monitor_Functional.h
        slprj/grt/System_Monitor_Functional/System_Monitor_Functional_private.h
        slprj/grt/System_Monitor_Functional/System_Monitor_Functional_types.h
        slprj/grt/Top_Level_Mode_Functional/Top_Level_Mode_Functional.c
        slprj/grt/Top_Level_Mode_Functional/Top_Level_Mode_Functional.h
        slprj/grt/Top_Level_Mode_Functional/Top_Level_Mode_Functional_private.h
        slprj/grt/Top_Level_Mode_Functional/Top_Level_Mode_Functional_types.h)

add_executable(GPCA_SW_Functional_Model_Code ${SOURCE_FILES})